# GoIT_1_21_10

./: pyproject.toml
project10/: db.sqlite3  manage.py  pyproject.toml
project10/project10/: asgi.py  settings.py  urls.py  wsgi.py
project10/quotes/: forms.py  models.py  urls.py  utils.py  views.py
project10/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
project10/quotes/templatetags/: extract,.py
project10/users/: admin.py  forms.py  views.py
project10/users/migrations/: 0001_initial.py  0002_delete_profile.py
project10/utils/: add_quotes_to_mongo.py  authors.json  quotes.json
